Fix bug where Content Items "jump" after nav becomes affixed.

--- a/app/assets/stylesheets/content_items/index.css
+++ b/app/assets/stylesheets/content_items/index.css
@@ -26,8 +26,8 @@ header {
   width: 200px;
 }
 
-nav {
-  margin-bottom: 16px;
+.nav-wrapper {
+  min-height: 66px;
 }
 
 nav ul {
